View playlists and videos through website

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,6 +10,7 @@
 <input type="submit" name="browser" value="Open in Browser">
 <input type="submit" name="yt" value="Get direct URL">
 </form>
+<a href="/playlist">Show Playlists</a>
 {% if not done is none %}
 <h2 id="done_label">{% if done %}Action completed{% else %}Error{% endif %}</h2>
 <script>
