Add open&play buttons in webapp

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -7,6 +7,9 @@
 <form action="/action" method="get">
 <input name="url" size="100" value="{{url}}"><br>
 <input type="submit" name="open" value="Open Player">
+<input type="submit" name="open_and_play_directly" value="Open Player & Play Directly">
+<input type="submit" name="open_and_play_youtube" value="Open Player & Play Youtube">
+<br>
 <input type="submit" name="browser" value="Open in Browser">
 <input type="submit" name="yt" value="Get direct URL">
 </form>
