Add links to sites to webapp

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -30,5 +30,11 @@ Bookmark this: <a href="javascript:(function(){location.href='{{base}}?url='+enc
 <textarea rows="5" cols="35">
 javascript:(function(){location.href='{{base}}?url='+encodeURIComponent(location.href);})()
 </textarea>
+
+<p>
+Sites:
+<br>
+<a href="https://w.online-life-hd.xyz/">w.online-life-hd.xyz</a><br>
+<a href="https://e.zfilm-online.xyz/">e.zfilm-online.xyz</a><br>
 </body>
 </html>
