Add start time option to website

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <form action="/action" method="get">
-<input name="url" size="100" value="{{url}}"><br>
+<input name="url" size="100" value="{{url}}"> Start time: <input name="start_time" size="8"><br>
 <input type="submit" name="open" value="Open Player">
 <input type="submit" name="open_and_play" value="Open Player & Play">
 <br>
