--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <form action="/action" method="get">
-<input name="url" size="100" value="{{url}}"> Start time: <input name="start_time" size="8"><br>
+	<input name="url" size="100" value="{{url}}" autocomplete="off"> Start time: <input name="start_time" size="8" autocomplete="off"><br><br>
 <input type="submit" name="open" value="Open Player">
 <input type="submit" name="open_and_play" value="Open Player & Play">
-<br>
+<br><br>
 <input type="submit" name="browser" value="Open in Browser">
 <input type="submit" name="yt" value="Get direct URL">
 </form>
